Kubernetes/Apps/Kuard/02-svcKuard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kuard
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-ip
  labels:
    app: kuard
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kuard
  type: LoadBalancer
